Fix "overflow"

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     height: 100%;
-    width: 565px;
+    width: 564px;
     display: flex;
     flex-direction: column;
     color: white;
